--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ div#profile {
   color: #1a73e8;           /* Keeps the text color black even after the link is visited */
 }
 
-.name, div#about h1, section#teaching h2, section#research h2, section#project h2 {
+.name, div#about h1, section#teaching h2, section#research h2, section#project h2, section#publications h2 {
   font-size: 2.5em;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
@@ -220,7 +220,7 @@ div#profile {
   background-color: #edededa3;
 }
 
-#project {
+#project, #publications {
   flex-direction: row;
   align-items: flex-start;
   justify-content: center;
@@ -237,7 +237,7 @@ div#profile {
   margin: 10px 0;
 }
 
-#teaching h2, #research h2, #project h2 {
+#teaching h2, #research h2, #project h2, #publications h2 {
   font-size: 1.8em;
   text-align: center;
   margin-bottom: 30px;
